@@ -5,9 +5,12 @@ source ./env.sh
 # get marlin settings and boot class path:
 source ./env_marlin_ojdk9.sh
 
+JAVA_TUNING=" -Xms4g  -Xmx4g -XX:+UseConcMarkSweepGC"
+
 # Enable stats
+CHECK=true
 STATS=false
-JAVA_OPTS="-Dsun.java2d.renderer.doStats=$STATS $JAVA_OPTS"
+JAVA_OPTS=" -Dsun.java2d.renderer.doChecks=$CHECK -Dsun.java2d.renderer.doStats=$STATS $JAVA_OPTS"
 
 echo "CLASSPATH:   $CLASSPATH"
 echo "Boot CP:     $BOOTCLASSPATH"
